# niova-raft

./: .gitmodules  Makefile.am  configure.ac
.github/actions/common-setup/: action.yml
.github/actions/teardown-failure/: action.yml
.github/workflows/: action.yml  c-cpp.yml  controlplane-recipes.yml  golang-apps-recipes.yml  lease_recipes.yml  lease_stale_recipes.yml  niova-basic-recipes.yml  niova-bulk-recovery.yml  niova-coalesced-wr.yml  niova-fail-over.yml  niova-prevote.yml  niova-rebuild.yml
scripts/: basic_recipes.txt  run-recipes.sh
scripts/verification/: README.md  verify_kv_crc.sh
src/: raft_cf_registry.c  raft_client.c  raft_net.c  raft_server.c  raft_server_backend_rocksdb.c
src/include/: raft.h  raft_cf_registry.h  raft_client.h  raft_net.h
test/: raft-net-test.c  raft-reference-client.c  raft-reference-server.c  raft_test.h  test_rocksdb_cf_issue.c
